--- a/environment.yml
+++ b/environment.yml
@@ -1,108 +1,137 @@
-name: modsimpy
+name: ModSimPy
 channels:
-- unidata
-- vpython
-- dsdale24
-- defaults
+  - unidata
+  - dsdale24
+  - defaults
 dependencies:
-- beautifulsoup4=4.6.0=py36_0
-- bleach=1.5.0=py36_0
-- certifi=2016.2.28=py36_0
-- cycler=0.10.0=py36_0
-- dbus=1.10.20=0
-- decorator=4.1.2=py36_0
-- entrypoints=0.2.3=py36_0
-- expat=2.1.0=0
-- fontconfig=2.12.1=3
-- freetype=2.5.5=2
-- glib=2.50.2=1
-- gst-plugins-base=1.8.0=0
-- gstreamer=1.8.0=0
-- html5lib=0.9999999=py36_0
-- icu=54.1=0
-- ipykernel=4.6.1=py36_0
-- ipython=6.1.0=py36_0
-- ipython_genutils=0.2.0=py36_0
-- ipywidgets=6.0.0=py36_0
-- jedi=0.10.2=py36_2
-- jinja2=2.9.6=py36_0
-- jpeg=9b=0
-- jsonschema=2.6.0=py36_0
-- jupyter=1.0.0=py36_3
-- jupyter_client=5.1.0=py36_0
-- jupyter_console=5.2.0=py36_0
-- jupyter_core=4.3.0=py36_0
-- libffi=3.2.1=1
-- libgcc=5.2.0=0
-- libgfortran=3.0.0=1
-- libiconv=1.14=0
-- libpng=1.6.30=1
-- libsodium=1.0.10=0
-- libxcb=1.12=1
-- libxml2=2.9.4=0
-- libxslt=1.1.29=0
-- lxml=3.8.0=py36_0
-- markupsafe=1.0=py36_0
-- matplotlib=2.0.2=np113py36_0
-- mistune=0.7.4=py36_0
-- mkl=2017.0.3=0
-- mpmath=0.19=py36_1
-- nbconvert=5.2.1=py36_0
-- nbformat=4.4.0=py36_0
-- notebook=5.0.0=py36_0
-- numpy=1.13.1=py36_0
-- openssl=1.0.2l=0
-- pandas=0.20.3=py36_0
-- pandocfilters=1.4.2=py36_0
-- path.py=10.3.1=py36_0
-- patsy=0.4.1=py36_0
-- pcre=8.39=1
-- pexpect=4.2.1=py36_0
-- pickleshare=0.7.4=py36_0
-- pip=9.0.1=py36_1
-- prompt_toolkit=1.0.15=py36_0
-- ptyprocess=0.5.2=py36_0
-- pygments=2.2.0=py36_0
-- pyparsing=2.2.0=py36_0
-- pyqt=5.6.0=py36_2
-- python=3.6.2=0
-- python-dateutil=2.6.1=py36_0
-- pytz=2017.2=py36_0
-- pyzmq=16.0.2=py36_0
-- qt=5.6.2=5
-- qtconsole=4.3.1=py36_0
-- readline=6.2=2
-- scipy=0.19.1=np113py36_0
-- seaborn=0.8=py36_0
-- setuptools=36.4.0=py36_1
-- simplegeneric=0.8.1=py36_1
-- sip=4.18=py36_0
-- six=1.10.0=py36_0
-- sqlite=3.13.0=0
-- statsmodels=0.8.0=np113py36_0
-- sympy=1.1.1=py36_0
-- terminado=0.6=py36_0
-- testpath=0.3.1=py36_0
-- tk=8.5.18=0
-- tornado=4.5.2=py36_0
-- traitlets=4.3.2=py36_0
-- ujson=1.35=py36_0
-- wcwidth=0.1.7=py36_0
-- wheel=0.29.0=py36_0
-- widgetsnbextension=3.0.2=py36_0
-- xz=5.2.3=0
-- zeromq=4.1.5=0
-- zlib=1.2.11=0
-- pint=0.7.2=py36_2
-- autobahn=17.10.1=py_0
-- txaio=2.8.2=py_0
-- vpnotebook=0.1.3=py36_1
-- vpython=7.2.0=py36hcaea454_0
-- pip:
-  - ipython-genutils==0.2.0
-  - jupyter-client==5.1.0
-  - jupyter-console==5.2.0
-  - jupyter-core==4.3.0
-  - prompt-toolkit==1.0.15
-prefix: /home/downey/anaconda3/envs/modsimpy
+  - appdirs=1.4.3=py36h28b3542_0
+  - asn1crypto=0.24.0=py36_0
+  - attrs=18.1.0=py36_0
+  - automat=0.7.0=py36_0
+  - backcall=0.1.0=py36_0
+  - beautifulsoup4=4.6.3=py36_0
+  - blas=1.0=mkl
+  - bleach=2.1.3=py36_0
+  - ca-certificates=2018.03.07=0
+  - certifi=2018.8.13=py36_0
+  - cffi=1.11.5=py36h9745a5d_0
+  - constantly=15.1.0=py36h28b3542_0
+  - cryptography=2.3=py36hb7f436b_0
+  - cryptography-vectors=2.3=py36_0
+  - cycler=0.10.0=py36_0
+  - dbus=1.13.2=h714fa37_1
+  - decorator=4.3.0=py36_0
+  - entrypoints=0.2.3=py36_2
+  - expat=2.2.5=he0dffb1_0
+  - fastcache=1.0.2=py36h14c3975_2
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_0
+  - glib=2.56.1=h000015b_0
+  - gmp=6.1.2=h6c8ec71_1
+  - gmpy2=2.0.8=py36h10f8cd9_2
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - html5lib=1.0.1=py36_0
+  - hyperlink=18.0.0=py36_0
+  - icu=58.2=h9c2bf20_1
+  - idna=2.7=py36_0
+  - incremental=17.5.0=py36_0
+  - intel-openmp=2018.0.3=0
+  - ipykernel=4.8.2=py36_0
+  - ipython=6.5.0=py36_0
+  - ipython_genutils=0.2.0=py36_0
+  - ipywidgets=7.4.0=py36_0
+  - jedi=0.12.1=py36_0
+  - jinja2=2.10=py36_0
+  - jpeg=9b=h024ee3a_2
+  - jsonschema=2.6.0=py36_0
+  - jupyter=1.0.0=py36_4
+  - jupyter_client=5.2.3=py36_0
+  - jupyter_console=5.2.0=py36_1
+  - jupyter_core=4.4.0=py36_0
+  - jupyterlab=0.33.8=py36_0
+  - jupyterlab_launcher=0.11.2=py36_0
+  - kiwisolver=1.0.1=py36hf484d3e_0
+  - libedit=3.1.20170329=h6b74fdf_2
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=7.2.0=hdf63c60_3
+  - libgfortran-ng=7.2.0=hdf63c60_3
+  - libpng=1.6.34=hb9fc6fc_0
+  - libsodium=1.0.16=h1bed415_0
+  - libstdcxx-ng=7.2.0=hdf63c60_3
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.8=h26e45fe_1
+  - libxslt=1.1.32=h1312cb7_0
+  - lxml=4.2.4=py36hf71bdeb_0
+  - markupsafe=1.0=py36h14c3975_1
+  - matplotlib=2.2.2=py36hb69df0a_2
+  - mistune=0.8.3=py36h14c3975_1
+  - mkl=2018.0.3=1
+  - mkl_fft=1.0.4=py36h4414c95_1
+  - mkl_random=1.0.1=py36h4414c95_1
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.1=hdf1c602_3
+  - mpmath=1.0.0=py36_2
+  - nbconvert=5.3.1=py36_0
+  - nbformat=4.4.0=py36_0
+  - ncurses=6.1=hf484d3e_0
+  - notebook=5.6.0=py36_0
+  - numpy=1.15.0=py36h1b885b7_0
+  - numpy-base=1.15.0=py36h3dfced4_0
+  - openssl=1.0.2o=h14c3975_1
+  - pandas=0.23.4=py36h04863e7_0
+  - pandoc=2.2.1=h629c226_0
+  - pandocfilters=1.4.2=py36_1
+  - parso=0.3.1=py36_0
+  - patsy=0.5.0=py36_0
+  - pcre=8.42=h439df22_0
+  - pexpect=4.6.0=py36_0
+  - pickleshare=0.7.4=py36_0
+  - pip=10.0.1=py36_0
+  - prometheus_client=0.3.1=py36_0
+  - prompt_toolkit=1.0.15=py36_0
+  - ptyprocess=0.6.0=py36_0
+  - pyasn1=0.4.4=py36_0
+  - pyasn1-modules=0.2.2=py36_0
+  - pycparser=2.18=py36_1
+  - pygments=2.2.0=py36_0
+  - pyopenssl=18.0.0=py36_0
+  - pyparsing=2.2.0=py36_1
+  - pyqt=5.9.2=py36h22d08a2_0
+  - python=3.6.6=hc3d631a_0
+  - python-dateutil=2.7.3=py36_0
+  - pytz=2018.5=py36_0
+  - pyzmq=17.1.0=py36h14c3975_0
+  - qt=5.9.6=h52aff34_0
+  - qtconsole=4.3.1=py36_0
+  - readline=7.0=ha6073c6_4
+  - scipy=1.1.0=py36hc49cb51_0
+  - seaborn=0.9.0=py36_0
+  - send2trash=1.5.0=py36_0
+  - service_identity=17.0.0=py36h28b3542_0
+  - setuptools=40.0.0=py36_0
+  - simplegeneric=0.8.1=py36_2
+  - sip=4.19.8=py36hf484d3e_0
+  - six=1.11.0=py36_1
+  - sqlite=3.24.0=h84994c4_0
+  - statsmodels=0.9.0=py36h035aef0_0
+  - sympy=1.2=py36_0
+  - terminado=0.8.1=py36_1
+  - testpath=0.3.1=py36_0
+  - tk=8.6.7=hc745277_3
+  - tornado=5.1=py36h14c3975_0
+  - traitlets=4.3.2=py36_0
+  - twisted=18.7.0=py36h14c3975_1
+  - wcwidth=0.1.7=py36_0
+  - webencodings=0.5.1=py36_1
+  - wheel=0.31.1=py36_0
+  - widgetsnbextension=3.4.0=py36_0
+  - xz=5.2.4=h14c3975_4
+  - zeromq=4.2.5=hf484d3e_0
+  - zlib=1.2.11=ha838bed_2
+  - zope=1.0=py36_0
+  - zope.interface=4.5.0=py36h14c3975_0
+  - pint=0.7.2=py36_2
+prefix: /home/downey/anaconda3/envs/ModSimPy
 
