--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,14 @@
 name: ModSimPy
 channels:
   - unidata
+  - conda-forge
   - dsdale24
   - defaults
 dependencies:
+  - ca-certificates=2018.8.24=ha4d7672_0
+  - certifi=2018.8.24=py36_1
+  - openssl=1.0.2o=h470a237_1
+  - pypdf2=1.26.0=py36_1
   - appdirs=1.4.3=py36h28b3542_0
   - asn1crypto=0.24.0=py36_0
   - attrs=18.1.0=py36_0
@@ -12,8 +17,6 @@ dependencies:
   - beautifulsoup4=4.6.3=py36_0
   - blas=1.0=mkl
   - bleach=2.1.3=py36_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.8.13=py36_0
   - cffi=1.11.5=py36h9745a5d_0
   - constantly=15.1.0=py36h28b3542_0
   - cryptography=2.3=py36hb7f436b_0
@@ -79,7 +82,6 @@ dependencies:
   - notebook=5.6.0=py36_0
   - numpy=1.15.0=py36h1b885b7_0
   - numpy-base=1.15.0=py36h3dfced4_0
-  - openssl=1.0.2o=h14c3975_1
   - pandas=0.23.4=py36h04863e7_0
   - pandoc=2.2.1=h629c226_0
   - pandocfilters=1.4.2=py36_1
