--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,14 @@ name: ModSimPy
 
 dependencies:
   - python=3.7
+  - jupyter
   - numpy
   - matplotlib
   - seaborn
   - pandas
   - scipy
   - pint
-  - scipy
+  - sympy
   
 
 
