--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # don't run on macos-latest; it can't install pytables
+        os: [ubuntu-latest, windows-latest]
         python-version: ["3.10"]
 
     steps:
